# v3-Mainnet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_FULL.md  SECURITY.md  evoluZionV2.md
V3/: Cargo.toml
V3/L1/core/: Cargo.toml
V3/L1/core/fuzz/: Cargo.toml
V3/L1/core/fuzz/fuzz_targets/: fuzz_merkle_root.rs  fuzz_validate_header.rs
V3/L1/core/src/: GENESIS_MESSAGE.txt  admin.rs  bridge.rs  chain.rs  checkpoint.rs  crypto.rs  difficulty.rs  discovery.rs  emission.rs  fee.rs  genesis.rs  ibd.rs  launch.rs  lib.rs  mempool_v2.rs  metrics.rs  migration.rs  node_builder.rs  orphan.rs  p2p_security.rs  peer_block_validation.rs  peer_manager.rs  propagation.rs  rpc.rs  storage.rs  tx.rs  validation.rs  wallet.rs  websocket.rs
V3/L1/cosmic-harmony/: Cargo.toml
V3/L1/cosmic-harmony/src/: algorithms_npu.rs  algorithms_opt.rs  deeksha.rs  deeksha_lite.rs  deeksha_lite_fire.rs  hic.rs  hugepages.rs  lib.rs  ncl_integration.rs  profit_router.rs  revenue.rs  revenue_journal.rs  scratchpad_ekam.rs  sha3_fast.rs  stream_layers.rs
V3/L1/cosmic-harmony/src/gpu/: mod.rs  opencl_kernel.rs
V3/L1/miner/: Cargo.toml  build.rs
V3/L1/miner/examples/: verify_gpu.rs
V3/L1/miner/src/: b3_verify.rs  banner.rs  cosmic_harmony_deeksha.cu  cuda_external.rs  deeksha_lite_fire.metal  ekam_deeksha.metal  gpu_backend.rs  gpu_guard.rs  interactive.rs  main.rs  opencl_diag.rs  opencl_smoke.rs  parallel.rs  reconnect.rs  sha3_debug.rs  ui.rs
V3/L1/native-ffi/: Cargo.toml  build.rs
V3/L1/native-ffi/csrc/autolykos/: autolykos_native.c
V3/L1/native-ffi/csrc/blake3/: blake3_native.c
V3/L1/native-ffi/csrc/compat/: zion_time_compat.h
V3/L1/native-ffi/csrc/cosmic_harmony/: cosmic_harmony_v3_native.c
V3/L1/native-ffi/csrc/etchash/: etchash_native.c
V3/L1/native-ffi/csrc/kawpow/: kawpow_native.c
V3/L1/native-ffi/csrc/kheavyhash/: kheavyhash_native.c
V3/L1/native-ffi/csrc/randomx/: randomx_stub.c
V3/L1/native-ffi/csrc/verushash/: verushash_portable.c
V3/L1/native-ffi/src/: lib.rs
V3/L1/pool/: Cargo.toml
V3/L1/pool/fuzz/: Cargo.toml
V3/L1/pool/fuzz/fuzz_targets/: fuzz_decode_message.rs  (+1 more)
V3/L1/pool/src/: lib.rs  ncl_gateway.rs  pplns.rs  revenue_proxy.rs
V3/L2/atomic-swap/: Cargo.toml
V3/L2/atomic-swap/config/: swap-mainnet.toml  swap-testnet.toml
V3/L2/atomic-swap/src/: config.rs  db.rs  error.rs  evm_watcher.rs  executor.rs  handlers.rs  lib.rs  main.rs  types.rs  watcher.rs
V3/L2/atomic-swap/tests/: integration.rs
V3/L2/bridge/: Cargo.toml
V3/L2/bridge/config/: bridge-mainnet.toml  bridge-testnet.toml
V3/L2/bridge/contracts/: foundry.toml
V3/L2/bridge/src/: ankr.rs  config.rs  db.rs  evm_rpc.rs  evm_tx.rs  evm_watcher.rs  l1_watcher.rs  lib.rs  main.rs  metrics.rs  rate_limiter.rs  relayer.rs  types.rs  validator.rs
V3/L2/bridge/tests/: bridge_integration.rs  mainnet_readiness.rs
V3/L2/contracts/hardhat/: .env.mainnet.example  .gitignore  README.md  deployed-arbitrum.json  deployed-avalanche.json  deployed-bsc.json  deployed-defi.json  deployed-farm-base.json  deployed-optimism.json  deployed-polygon.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
V3/L2/dao/: Cargo.toml
V3/L2/dao/config/: dao-mainnet.toml  dao-testnet.toml
V3/L2/dao/docs/: GOVERNANCE_STRUCTURE.md  PROTOCOLS.md  README.md  SACRED_TRINITY.md  V3_SOFTWARE.md
V3/L2/dao/src/: api.rs  co_admin.rs  config.rs  consent.rs  cross_layer.rs  db.rs  error.rs  executor.rs  humanitarian.rs  l1_scanner.rs  lib.rs  main.rs  metrics.rs  prizes.rs  proposal.rs  quorum.rs  timelock.rs  treasury.rs  types.rs  voting.rs
V3/L2/dao/tests/: integration.rs
V3/L4/docs/: README.md
V3/L4/docs/AVATARS/: README.md  sacred-trinity.md
V3/L4/docs/GAME_SYSTEMS/: consciousness-levels.md  golden-egg.md  guilds-territories.md
V3/L4/docs/TECH/: api-spec.md  ue5-integration.md
V3/L4/oasis/: Build-Oasis.ps1  Build-Oasis.sh  Cargo.toml  Dockerfile  README.md  Run-Stack.ps1  Run-Stack.sh  docker-compose.yml  nginx.conf  prometheus.yml
V3/L4/oasis/data/: avatars.json  golden_egg.json  prize_tiers.json  world.json
V3/L4/oasis/scripts/: gen_ue5_avatar_pipeline.py  parse_avatars.py
V3/L4/oasis/src/: api.rs  auth.rs  blockchain_listener.rs  challenges.rs  combat.rs  config.rs  consciousness.rs  db.rs  error.rs  golden_egg.rs  guild.rs  hiran_bridge.rs  leaderboard.rs  levels.rs  lib.rs  main.rs  metrics.rs  player.rs  prize_tiers.rs  quests.rs  raid_team.rs  rate_limit.rs  rewards.rs  server.rs  territory.rs  tithe.rs  websocket.rs  xp.rs
V3/L4/oasis/ue5/: .gitattributes  .gitignore  GenerateProjectFiles.ps1  GenerateProjectFiles.sh  README_UE5.md  RunEditor.ps1  RunEditor.sh  ZionOasis.uproject
V3/L5/docs/: README.md
V3/L5/docs/ARCHITECTURE/: l5-system-design.md
V3/L5/docs/COMMUNITIES/: dharma-temple.md  genesis-garden.md  te-piko-ora.md
V3/L5/docs/GOVERNANCE/: community-dao-framework.md  consciousness-admission-framework.md  multi-layer-dao-governance.md  sefirot-vow.md
V3/L5/docs/PROTOCOLS/: resonance-protocol.md
V3/L5/docs/TECH/: medical-table.md  mesh-network.md  zion-node-spec.md
V3/L5/docs/TEMPLATES/: community-blueprint.md
V3/L5/free-world/: Cargo.toml
V3/L5/free-world/src/: api.rs  config.rs  dao_client.rs  db.rs  error.rs  hiran_bridge.rs  l1_scanner.rs  lib.rs  main.rs  metrics.rs
V3/L5/free-world/tests/: db.rs
V3/cli/: Cargo.toml  README.md
V3/cli/src/: config.rs  lib.rs  main.rs  menu.rs  ui.rs
V3/cli/src/commands/: completions.rs  doctor.rs  mine.rs  mod.rs  node.rs  onboard.rs  pool.rs  status.rs  update.rs  wallet.rs
V3/cli/src/rpc/: node_rpc.rs
V3/community-cli/: Cargo.toml
V3/community-cli/src/: bundle.rs  config.rs  lib.rs  main.rs  menu.rs  process.rs  ui.rs
V3/community-cli/src/commands/: ai.rs  doctor.rs  mine.rs  mod.rs  monitor.rs  node.rs  pool.rs  stats.rs  status.rs  wallet.rs
V3/docs/: CLI_E2E_REPORT_3.0.5.md  CLI_GUIDE.md  CLI_REFERENCE.md  MAINNET_CONSTANTS.md
V3/sdk/: Cargo.toml
V3/sdk/src/: config.rs  error.rs  lib.rs  node.rs  rpc_codes.rs  types.rs  wallet.rs
(+123 files in other folders)
