[package]
name = "zion-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zion CLI — wallet, node, and miner gateway for the ZION network"

[lib]
name = "zion_cli"
path = "src/lib.rs"

[[bin]]
name = "zion"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "color"] }
toml = "0.8"
colored = "2"
dialoguer = "0.11"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap_complete = "4"
sha2 = "0.10"
hex.workspace = true
bip39 = { version = "2", features = ["rand"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
zion-core = { path = "../L1/core" }
zion-sdk = { path = "../sdk" }
