[package]
name = "zion-public"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZION CLI — wallet, node, mining & diagnostics for the community"
homepage = "https://zionterranova.com"
repository = "https://github.com/Zion-TerraNova/v3-Mainnet"

[[bin]]
name = "zion"
path = "src/main.rs"

[lib]
name = "zion_public"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ed25519-dalek.workspace = true
bip39 = { version = "2", features = ["rand"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand.workspace = true
hex.workspace = true
sha2.workspace = true
chrono.workspace = true
dirs = "5"

# Archive extraction for binary download (Linux/macOS bundle fallback)
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Link the same L1 core + SDK — byte-exact crypto compatibility with the node.
zion-core = { path = "../L1/core" }
zion-sdk = { path = "../sdk" }
