[package]
name = "zion-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZION L1 ↔ EVM bridge relay — watches L1 locks, triggers wZION mints on EVM chains"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for L1 RPC + Ankr EVM RPC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Crypto — keccak256 for EVM event topic hash
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
# secp256k1 signing for EVM transactions (submitLockProof)
k256 = { version = "0.13", features = ["ecdsa"] }

# Database (bridge state persistence)
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP server (Prometheus metrics endpoint)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
