[package]
name = "zion-dao"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZION L2 — DAO Governance: proposals, voting, treasury, humanitarian fund"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
ripemd = "0.1"
ed25519-dalek = { version = "2", features = ["serde"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP API
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "zion-dao"
path = "src/main.rs"
