[package]
name = "zion-oasis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZION V3 L4 — OASIS: Consciousness Mining Game — XP, levels, guilds, territories"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Utils
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP API server
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (Hiran AI bridge)
reqwest = { version = "0.12", features = ["json"] }

# Wallet signature auth (Ed25519)
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rand = { workspace = true }

[[bin]]
name = "zion-oasis"
path = "src/main.rs"
