[package]
name = "zion-free-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ZION V3 L5 — Free World: humanitarian grants, community projects, free energy research, education"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP API
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utils
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "zion-free-world"
path = "src/main.rs"
